Fix background color overlap for top bar element
As well as Language Switcher color fix for dropdown

Due to incorrect reference of dropdown background color

Jira: WLP-819, WLP-826

--- a/public/scss/components/_language-switcher.scss
+++ b/public/scss/components/_language-switcher.scss
@@ -1,6 +1,14 @@
 .language-switcher {
   background-color: transparent;
+  padding: rem-calc(20);
+  border: 0;
+
+  outline: none;
+  appearance: none;
+
   color: white;
-  padding-right: 20px;
-  border: 0px;
+
+  &:focus {
+    color: black;
+  }
 }
